# Chip8-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  chip8.cpp  chip8.h  eventhandler.cpp  eventhandler.h  main.cpp  opdecoder.cpp  opdecoder.h  sdlscreen.cpp  sdlscreen.h
